--- a/index.html
+++ b/index.html
@@ -271,12 +271,12 @@ body {
 /* Styling for the actual "Next" blocks (#next-secondary, #next-primary) */
 #next-pair > .block { /* Target direct children blocks of #next-pair */
     position: relative;
-    z-index: 2;         /* HIGHER z-index: These blocks go ON TOP of next-next */
+    z-index: 2;         /* HIGHER z-index: These blocks go ON TOP of next2 */
     /* width, height, etc., are already set by .block and JS */
 }
 
-/* Container for the "Next-Next" preview */
-.next-next-pair-container {
+/* Container for the "next2" preview */
+.next2-pair-container {
     position: absolute;   /* Positioned relative to #next-pair */
     top: 10px;            /* Adjust: Offset DOWN from the top of #next-pair blocks */
     left: 10px;           /* Adjust: Offset RIGHT from the left of #next-pair blocks */
@@ -284,11 +284,11 @@ body {
     opacity: 0.5;         /* Faded */
     z-index: 1;           /* LOWER z-index: This goes BEHIND #next-pair > .block */
     display: flex;
-    justify-content: center; /* Centers the #next-next-pair div inside */
+    justify-content: center; /* Centers the #next2-pair div inside */
 }
 
-/* The div holding the next-next blocks */
-#next-next-pair {
+/* The div holding the next2 blocks */
+#next2-pair {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,7 +314,7 @@ body {
     justify-content: center;
     padding: 8px;
     margin: 10px auto; /* Adjusted margin, was 10px auto */
-    margin-top: 10px; /* Reduce top margin if next-next makes it too low */
+    margin-top: 10px; /* Reduce top margin if next2 makes it too low */
     border: none;
     border-radius: 5px;
     background-color: #e0e0e0;
@@ -323,7 +323,7 @@ body {
     font-size: clamp(0.9em, 2vw, 1.1em);
     box-sizing: border-box;
     position: relative; /* Add relative positioning */
-    z-index: 5;         /* Ensure it's above the next-next pair if overlapping occurs */
+    z-index: 5;         /* Ensure it's above the next2 pair if overlapping occurs */
 }
 
 #save-pair-btn .save-btn-text {
@@ -560,10 +560,10 @@ body {
                         <div id="next-pair">
                             <div class="block secondary-block" id="next-secondary"></div>
                             <div class="block primary-block" id="next-primary"></div>
-							<div class="next-next-pair-container"> 
-                            <div id="next-next-pair">
-                                <div class="block secondary-block" id="next-next-secondary"></div>
-                                <div class="block primary-block" id="next-next-primary"></div>
+							<div class="next2-pair-container"> 
+                            <div id="next2-pair">
+                                <div class="block secondary-block" id="next2-secondary"></div>
+                                <div class="block primary-block" id="next2-primary"></div>
                             </div>
                         </div>
                         </div>
@@ -632,8 +632,8 @@ document.addEventListener('DOMContentLoaded', () => {
     const currentSecondaryDisplay = document.getElementById('current-secondary');
     const nextPrimaryDisplay = document.getElementById('next-primary');
     const nextSecondaryDisplay = document.getElementById('next-secondary');
-    const nextNextPrimaryDisplay = document.getElementById('next-next-primary');
-    const nextNextSecondaryDisplay = document.getElementById('next-next-secondary');
+    const next2PrimaryDisplay = document.getElementById('next2-primary');
+    const next2SecondaryDisplay = document.getElementById('next2-secondary');
     
 	const savePairBtn = document.getElementById('save-pair-btn');
     const savedPrimaryDisplay = document.getElementById('saved-primary-preview');
@@ -704,7 +704,7 @@ document.addEventListener('DOMContentLoaded', () => {
     let playfield = [];
     let currentPair = { primary: null, secondary: null };
     let nextPair = { primary: null, secondary: null };
-	let nextNextPair = { primary: null, secondary: null };
+	let next2Pair = { primary: null, secondary: null };
     let savedPair = { primary: null, secondary: null };
     let cellSize = 40;
     let allowInput = false;
@@ -1040,7 +1040,7 @@ document.addEventListener('DOMContentLoaded', () => {
         blockBag = []; // Clear bag before new game
         generateBlockBag(); // Generate initial bag
 
-        // Initialize currentPair, nextPair, and nextNextPair from the bag
+        // Initialize currentPair, nextPair, and next2Pair from the bag
         if (blockBag.length >= 2) {
             currentPair.primary = blockBag.shift();
             currentPair.secondary = blockBag.shift();
@@ -1059,16 +1059,16 @@ document.addEventListener('DOMContentLoaded', () => {
             nextPair.secondary = getRandomColorFallback();
         }
 
-        if (blockBag.length >= 2) { // New: Initialize nextNextPair
-            nextNextPair.primary = blockBag.shift();
-            nextNextPair.secondary = blockBag.shift();
+        if (blockBag.length >= 2) { // New: Initialize next2Pair
+            next2Pair.primary = blockBag.shift();
+            next2Pair.secondary = blockBag.shift();
         } else {
-            console.error("Block bag too short for initial nextNextPair, using random.");
-            nextNextPair.primary = getRandomColorFallback();
-            nextNextPair.secondary = getRandomColorFallback();
+            console.error("Block bag too short for initial next2Pair, using random.");
+            next2Pair.primary = getRandomColorFallback();
+            next2Pair.secondary = getRandomColorFallback();
         }
 
-        updatePreviewDisplays(); // This will now also call updateNextNextPreviewDisplay internally or separately
+        updatePreviewDisplays(); // This will now also call updatenext2PreviewDisplay internally or separately
 
         allowInput = true;
         isFalling = false;
@@ -1132,7 +1132,7 @@ document.addEventListener('DOMContentLoaded', () => {
             b.style.height = `${currentPairBlockSize}px`;
             b.style.borderRadius = `${Math.floor(currentPairBlockSize * 0.2)}px`;
         });
-        document.querySelectorAll('#next-pair .block, #next-next-pair .block').forEach(b => { // Added #next-next-pair .block
+        document.querySelectorAll('#next-pair .block, #next2-pair .block').forEach(b => { // Added #next2-pair .block
             b.style.width = `${nextPairBlockSize}px`;
             b.style.height = `${nextPairBlockSize}px`;
             b.style.borderRadius = `${Math.floor(nextPairBlockSize * 0.2)}px`;
@@ -1175,23 +1175,23 @@ document.addEventListener('DOMContentLoaded', () => {
 
     function generateNewPair() {
         currentPair = { ...nextPair };
-        nextPair = { ...nextNextPair }; // nextNext becomes next
+        nextPair = { ...next2Pair }; // next2 becomes next
 
         if (blockBag.length < 2) {
-            console.log("Block bag empty or near empty for nextNextPair, regenerating...");
+            console.log("Block bag empty or near empty for next2Pair, regenerating...");
             generateBlockBag();
         }
 
         if (blockBag.length >= 2) {
-            nextNextPair.primary = blockBag.shift(); // Get new nextNext primary
-            nextNextPair.secondary = blockBag.shift(); // Get new nextNext secondary
+            next2Pair.primary = blockBag.shift(); // Get new next2 primary
+            next2Pair.secondary = blockBag.shift(); // Get new next2 secondary
         } else {
-            console.error("Block bag is critically low after attempted regeneration for nextNextPair. Using fallback.");
-            nextNextPair.primary = getRandomColorFallback();
-            nextNextPair.secondary = getRandomColorFallback();
+            console.error("Block bag is critically low after attempted regeneration for next2Pair. Using fallback.");
+            next2Pair.primary = getRandomColorFallback();
+            next2Pair.secondary = getRandomColorFallback();
         }
 
-        // Fallback for currentPair if it was somehow not set (e.g., initial empty nextNextPair)
+        // Fallback for currentPair if it was somehow not set (e.g., initial empty next2Pair)
         if (!currentPair.primary) {
             console.warn("Current pair was not properly set from nextPair, pulling from bag/fallback.");
             if (blockBag.length >= 2) {
@@ -1204,7 +1204,7 @@ document.addEventListener('DOMContentLoaded', () => {
         }
         // Fallback for nextPair if it was somehow not set
         if (!nextPair.primary) {
-             console.warn("Next pair was not properly set from nextNextPair, pulling from bag/fallback.");
+             console.warn("Next pair was not properly set from next2Pair, pulling from bag/fallback.");
             if (blockBag.length >= 2) {
                 nextPair.primary = blockBag.shift();
                 nextPair.secondary = blockBag.shift();
@@ -1228,13 +1228,13 @@ document.addEventListener('DOMContentLoaded', () => {
             nextSecondaryDisplay.className = `block secondary-block ${nextPair.secondary}`;
         }
 		
-        if (nextNextPair.primary && nextNextPrimaryDisplay && nextNextSecondaryDisplay) {
-            nextNextPrimaryDisplay.className = `block primary-block ${nextNextPair.primary}`;
-            nextNextSecondaryDisplay.className = `block secondary-block ${nextNextPair.secondary}`;
-        } else if (nextNextPrimaryDisplay && nextNextSecondaryDisplay) {
-            // Handle case where nextNextPair might be temporarily empty or elements not found
-            nextNextPrimaryDisplay.className = `block primary-block`; // Clear class
-            nextNextSecondaryDisplay.className = `block secondary-block`; // Clear class
+        if (next2Pair.primary && next2PrimaryDisplay && next2SecondaryDisplay) {
+            next2PrimaryDisplay.className = `block primary-block ${next2Pair.primary}`;
+            next2SecondaryDisplay.className = `block secondary-block ${next2Pair.secondary}`;
+        } else if (next2PrimaryDisplay && next2SecondaryDisplay) {
+            // Handle case where next2Pair might be temporarily empty or elements not found
+            next2PrimaryDisplay.className = `block primary-block`; // Clear class
+            next2SecondaryDisplay.className = `block secondary-block`; // Clear class
         }
     }
 
