--- a/index.html
+++ b/index.html
@@ -813,7 +813,7 @@ document.addEventListener('DOMContentLoaded', () => {
             nowLabel: "<b>HIỆN TẠI</b>",
             nextLabel: "Kế tiếp",
             saveLabelText: "Lưu trữ",
-            endGameLabel: "Kết thúc trò chơi",
+            endGameLabel: "Kết thúc",
 
             gameOverTitle: "Trò chơi kết thúc",
             finalScoreLabelText: "Điểm của bạn: ",
@@ -823,8 +823,8 @@ document.addEventListener('DOMContentLoaded', () => {
             mainMenuLabel: "Menu chính",
 			
 			confirmEndGameTitle: "Xác nhận Kết thúc trò chơi?",
-            confirmEndGameYes: "Có, Kết thúc",
-            confirmEndGameNo: "Không, Tiếp tục"
+            confirmEndGameYes: "Có, kết thúc",
+            confirmEndGameNo: "Không, tiếp tục"
         }
     };
 
