--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    max-width: 90%; /* Ensure modal fits on smaller screens */
+    max-width: 75%;
     max-height: 90vh; /* Prevent modal from being too tall */
     overflow-y: auto; /* Allow scrolling if content overflows */
 }
@@ -447,6 +447,9 @@ body {
 
 /* Responsive adjustments */
 @media (max-width: 600px) {
+    .modal-content {
+        max-width: 90%; /* Ensure modal fits on smaller screens */
+    }
     #stats-area {
         font-size: 1em; /* Base for em units in stat items */
         padding: 6px 8px;
