--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ document.addEventListener('DOMContentLoaded', () => {
             htpGameplayLabel: "<strong>Gameplay:</strong>",
             htpGameplayRule1: "You'll see a pair of blocks (NOW pair) and the Next pair that will come after. The block with the '×' is the primary block.",
             htpGameplayRule2: "To place blocks, tap (click) on an empty cell in the playfield. This will be the position of the primary block.",
-            htpGameplayRule3: "Drag your finger (mouse) away from the primary block (up, down, left, or right) to position the secondary block next to it.<br>Release to place the pair.",
+            htpGameplayRule3: "Drag your finger (mouse) away from the primary block (up, down, left, or right) to position the secondary block next to it. Release to place the pair.",
             htpGameplayRule4: "The placed blocks will fall to the lowest available position in their columns.",
             htpGameplayRule5: "When 4 or more blocks of the same color are touching (not diagonally), they will form a group and clear, and you'll earn points.",
             htpGameplayRule6: "Clearing multiple groups and making chain reaction with one placement increases your combo for more points! (e.g. 2x, 3x)",
@@ -774,7 +774,7 @@ document.addEventListener('DOMContentLoaded', () => {
             htpTimedModeLabel: "<strong>Timed Mode:</strong>",
             htpTimedModeDesc: "Score as many points as you can before the 100-second timer runs out.",
             htpPressureModeLabel: "<strong>Pressure Mode:</strong>",
-            htpPressureModeDesc: "You have a limited time to make each move. This time gets shorter with each successful placement!<br>If you run out of time, a pair will be placed for you at a random empty column.",
+            htpPressureModeDesc: "You have a limited time to make each move. This time gets shorter with each successful placement! If you run out of time, a pair will be placed for you at a random empty column.",
             gotIt: "Got it!",
 
             nowLabel: "<b>NOW</b>",
@@ -820,7 +820,7 @@ document.addEventListener('DOMContentLoaded', () => {
             htpTimedModeLabel: "<strong>Chế độ Tính giờ:</strong>",
             htpTimedModeDesc: "Ghi càng nhiều điểm càng tốt trước khi hết 100 giây.",
             htpPressureModeLabel: "<strong>Chế độ Áp lực:</strong>",
-            htpPressureModeDesc: "Bạn bị giới hạn thời gian thực hiện mỗi nước đi. Thời gian này sẽ ngắn dần sau mỗi lần đặt thành công!<br>Nếu hết giờ, một cặp khối sẽ được tự động đặt vào một cột trống ngẫu nhiên.",
+            htpPressureModeDesc: "Bạn bị giới hạn thời gian thực hiện mỗi nước đi. Thời gian này sẽ ngắn dần sau mỗi lần đặt thành công! Nếu hết giờ, một cặp khối sẽ được tự động đặt vào một cột trống ngẫu nhiên.",
             gotIt: "Đã hiểu!",
 
             nowLabel: "<b>HIỆN TẠI</b>",
